added manufacturers csv file.

--- a/Cars/Cars.csproj
+++ b/Cars/Cars.csproj
@@ -52,6 +52,9 @@
     <None Include="fuel2.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="manufacturers.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
